[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myTOPcode"
version = "0.0.1"
authors = [
  { name="StanleyTsai", email="stanley-0816@hotmail.com" },
]
description = "學習檔案"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Stanley6180/myTOPcode"
